--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "mongose": "0.0.2-security"
   },
@@ -19,6 +21,6 @@
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.6"
   }
 }
